# python-project-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .sonarcloud-example.yml  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/docs/: api.md  development.md  getting-started.md  index.md  infrastructure.md
{{cookiecutter.project_slug}}/infrastructure/: __init__.py  app.py  cdk.json
{{cookiecutter.project_slug}}/infrastructure/stacks/: __init__.py  {{cookiecutter.package_name}}_stack.py
{{cookiecutter.project_slug}}/scripts/: cleanup-feature-branches.py
{{cookiecutter.project_slug}}/src/handlers/: processor.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  logging_config.py  main.py
{{cookiecutter.project_slug}}/tests/test_{{cookiecutter.package_name}}/: __init__.py  test_api.py  test_lambda.py  test_main.py
